--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test -u bdd -R spec"
+    "test": "mocha index -u bdd -R spec"
   },
   "keywords": [],
   "author": "",
